--- a/grid.html
+++ b/grid.html
@@ -19,10 +19,10 @@
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <div class="container text-center">
         <div class="row">
-          <div class="col">
+          <div class="col-2 bg-secondary">
             1 of 2
           </div>
-          <div class="col">
+          <div class="col-5 bg-success">
             2 of 2
           </div>
         </div>
