--- a/grid.html
+++ b/grid.html
@@ -38,5 +38,13 @@
           </div>
         </div>
       </div>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero, eum delectus quidem facilis consequuntur similique accusantium, odio, dolore ut reprehenderit et modi at alias voluptas ex? Fuga nam provident, quam fugiat laboriosam enim recusandae magnam cum! Quam dolores sapiente dolor aliquam, saepe praesentium obcaecati esse commodi magni reprehenderit ut!</p></div>
+          <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero, eum delectus quidem facilis consequuntur similique accusantium, odio, dolore ut reprehenderit et modi at alias voluptas ex? Fuga nam provident, quam fugiat laboriosam enim recusandae magnam cum! Quam dolores sapiente dolor aliquam, saepe praesentium obcaecati esse commodi magni reprehenderit ut!</p>Column</div>
+          <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero, eum delectus quidem facilis consequuntur similique accusantium, odio, dolore ut reprehenderit et modi at alias voluptas ex? Fuga nam provident, quam fugiat laboriosam enim recusandae magnam cum! Quam dolores sapiente dolor aliquam, saepe praesentium obcaecati esse commodi magni reprehenderit ut!</p>Column</div>
+          <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero, eum delectus quidem facilis consequuntur similique accusantium, odio, dolore ut reprehenderit et modi at alias voluptas ex? Fuga nam provident, quam fugiat laboriosam enim recusandae magnam cum! Quam dolores sapiente dolor aliquam, saepe praesentium obcaecati esse commodi magni reprehenderit ut!</p>Column</div>
+        </div>
+      </div>
 </body>
 </html>
